--- a/orders/order/api-reference/api.yml
+++ b/orders/order/api-reference/api.yml
@@ -734,12 +734,11 @@ components:
         
         **Access Control**:
         - *Reading*: Users can only query and view orders whose `restriction` value matches one of their authorized restrictions
-        - *Modifying*: Requires special `restriction.restriction_manage` scope permission to create or update this field
         
         **Validation**: The value must exist in the tenant's configured list of valid restrictions.
         
         **Site Synchronization**: When enabled via tenant configuration (`enableSyncBetweenRestrictionsAndSiteCodes` property), 
-        this field automatically syncs with the `site` value if not explicitly set.
+        this field automatically syncs with the `siteCode` value if not explicitly set.
       example: "DE"
     localizedValue:
       description: Localized value which can have different structure which depends on provided `Content-Language` header.
