--- a/quotes/quote/api-reference/api.yaml
+++ b/quotes/quote/api-reference/api.yaml
@@ -1498,8 +1498,10 @@ components:
         
         **Validation**: The value must exist in the tenant's configured list of valid restrictions.
         
-        **Site Synchronization**: When enabled via tenant configuration (`enableSyncBetweenRestrictionsAndSiteCodes` property), 
-        this field automatically syncs with the customer `preferredSite` value if customer created the quote.
+        **Restriction Synchronization**: If quote is created by customer and `restriction` is not set, the `restriction` value will be set to the customer's restriction.' 
+
+        **Site Synchronization**: If restriction still is not set and tenant configuration (`enableSyncBetweenRestrictionsAndSiteCodes` property) is set to `true`, 
+        this field automatically syncs with the `siteCode`.
       example: "DE"
     QuoteItemUpdatePriceRow:
       type: object
